...
                          ),
                          height: 64,
                          width: 64,
                          clipBehavior: Clip.antiAlias,
                          child: Image.network(
                            state.model.photoUrl,
                            key: const Key("imageProfile"),
                            fit: BoxFit.contain,
                          ),
                        )
                      ],
                    ),
                    const SizedBox(height: 32),
...
                        ),
                        Positioned(
                          left: 0,
                          right: 0,
                          bottom: 0,
                          child: Container(
                            key: const Key("bar"),
                            height: state.model.activities[entry.key].heightBar,
                            decoration: BoxDecoration(
                              color: state.model.activities[entry.key].isActive ? CustomColors.primary : CustomColors.placeholderText.withOpacity(0.16),
                              borderRadius: BorderRadius.circular(6),
                            )
                          ),
...
